[gd_scene load_steps=2 format=3 uid="uid://devmenu"]

[ext_resource type="Script" path="res://scripts/ui/DevMenu.gd" id="1_script"]

[node name="DevMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "DEVELOPER MENU - Item Spawner"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/TitleBar"]
layout_mode = 2
text = "X"
flat = true

[node name="SearchBar" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Search items..."

[node name="Instructions" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
bbcode_enabled = true
text = "[b]Instructions:[/b]
• Click: Add 1 item
• Shift+Click: Add 10 items  
• Ctrl+Click: Add max stack
• ` (backtick): Toggle this menu"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 120.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ItemContainer" type="GridContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4